@@ -15,3 +15,8 @@ reskins.lib.setting_override("bool-setting", "reskins-angels-do-angelsexploratio
 reskins.lib.setting_override("bool-setting", "reskins-angels-do-angelsaddons-cab")
 reskins.lib.setting_override("bool-setting", "reskins-angels-do-angelsaddons-mobility")
 -- reskins.lib.setting_override("bool-setting", "reskins-angels-do-angelsaddons-storage")
+
+-- Override Bob's "Deuterium is Blue!" setting based on presence of Angel's Industries
+if mods["angelsindustries"] then
+    reskins.lib.setting_override("bool-setting", "bobmods-plates-bluedeuterium", true)
+end
